# igm-opengl

./: .gitignore  README.md
igm-cube/ubuntu/: Makefile  spinningcube.cpp
igm-cube/windows/igm-cube/: CMakeLists.txt  CMakeSettings.json
igm-cube/windows/igm-cube/igm-cube/: CMakeLists.txt
igm-osg/: README.md
igm-osg/ubuntu/: Makefile  spinningcube_osg  spinningcube_osg.cpp
